--- a/themes/next/source/css/_common/components/post/post.styl
+++ b/themes/next/source/css/_common/components/post/post.styl
@@ -71,3 +71,11 @@
 @import 'post-copyright' if (hexo-config('creative_commons.post'));
 
 @import 'post-followme' if (hexo-config('follow_me'));
+
+// .post-body p a{
+//   color: #345;
+//   border-bottom: none;
+//   &:hover{
+//     color: #fcfcfc;
+//   }
+// }
