修改链接的颜色：蓝色显示，选中变红色

--- a/themes/next/source/css/_common/components/post/post.styl
+++ b/themes/next/source/css/_common/components/post/post.styl
@@ -72,10 +72,10 @@
 
 @import 'post-followme' if (hexo-config('follow_me'));
 
-// .post-body p a{
-//   color: #345;
-//   border-bottom: none;
-//   &:hover{
-//     color: #fcfcfc;
-//   }
-// }
+.post-body p a{
+  color: #2299dd;
+  border-bottom: none;
+  &:hover{
+    color: #ff5555;
+  }
+}
